--- a/treatment-for-covid-19/index.html
+++ b/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Treatment</h1>
           
-            <p class="small-text">Last updated&nbsp;January 11, 2021 at 10:30 PM</p>
+            <p class="small-text">Last updated&nbsp;February 18, 2021 at 5:05 PM</p>
           
         </div>
       </div>
@@ -181,7 +181,7 @@
 
 
 
-<ul><li>The Food and Drug Administration (FDA) has approved one drug  to treat COVID-19: remdesivir (Veklury).</li><li>The FDA has issued <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">emergency use authorizations </a>(EUAs). These let healthcare providers use products that are not yet approved. Some drugs approved for other uses are also permitted to treat COVID-19. But certain requirements must be met.</li><li>The National Institutes of Health (NIH) has developed COVID-19 <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">Treatment Guidelines</a>. These help COVID-19 healthcare providers understand how to use available drugs.</li></ul>
+<ul><li>The Food and Drug Administration (FDA) has approved one drug&nbsp; to treat COVID-19: remdesivir (Veklury).</li><li>The FDA has issued <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">emergency use authorizations </a>(EUAs). These let healthcare providers use products that are not yet approved. Some drugs approved for other uses are also permitted to treat COVID-19. But certain requirements must be met.</li><li>The National Institutes of Health (NIH) has developed COVID-19 <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">Treatment Guidelines</a>. These help COVID-19 healthcare providers understand how to use available drugs.</li></ul>
 
 
 
@@ -197,7 +197,7 @@
 
 
 
-<p>For people at high risk of getting very sick, the FDA has issued EUAs for two monoclonal antibodies. They are <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a> and <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab plus imdevimab</a>. These attach to parts of the virus, helping the immune system recognize and respond to it. If used, they should be given as soon as possible, or within 10 days of the beginning of symptoms.</p>
+<p>For people at high risk of getting very sick, the FDA has issued EUAs for a few monoclonal antibody treatments. They are <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a>, <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">bamlanivimab and etesevimab administered together</a>, and <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab plus imdevimab</a>. These attach to parts of the virus, helping the immune system recognize and respond to it. If used, they should be given as soon as possible, or within 10 days of the beginning of symptoms.</p>
 
 
 
@@ -225,7 +225,7 @@
 
 
 
-<ul><li><strong>Slowing the virus.</strong> Antiviral medications slow down the virus multiplying and spreading through the body.<ul><li><a href="https://medlineplus.gov/druginfo/meds/a620033.html">Remdesivir</a> (Veklury) is an antiviral medication approved by FDA to treat COVID-19. NIH guidelines <a href="https://www.covid19treatmentguidelines.nih.gov/antiviral-therapy/remdesivir/">recommend remdesivir</a> for certain hospitalized COVID-19 patients.  It is given to patients by IV.</li></ul></li><li><strong>Reducing an overactive immune response.</strong> In patients with severe COVID-19, the body’s immune system may overreact to the threat of the virus. This can cause damage to the body’s organs and tissues. Some treatments can help reduce this overactive immune response.<ul><li><a href="https://medlineplus.gov/druginfo/meds/a682792.html">Dexamethasone</a> is a steroid medication. It acts like a natural hormone produced by the body, and can prevent or reduce injury. NIH guidelines <a href="https://www.covid19treatmentguidelines.nih.gov/immune-based-therapy/immunomodulators/corticosteroids/">recommend dexamethasone</a> for some patients with severe COVID-19. Dexamethasone is recommended for patients who need supplemental oxygen.</li></ul></li><li><strong>Treating complications.</strong> COVID-19 can damage the heart, blood vessels, kidneys, brain, skin, eyes, and gastrointestinal organs. It can also cause other complications. Depending on the situation, more treatments might be needed, such as blood thinners for blood clots.</li><li><strong>Supporting the body’s immune function<em>.</em> </strong>Plasma from recovered COVID-19 patients can contain antibodies to the virus. This may help the immune system recognize and respond more effectively to the virus. But currently, <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">NIH guidelines</a> do not recommend <a href="https://www.covid19treatmentguidelines.nih.gov/immune-based-therapy/blood-derived-products/convalescent-plasma/">plasma treatment</a>.</li></ul>
+<ul><li><strong>Slowing the virus.</strong> Antiviral medications slow down the virus multiplying and spreading through the body.<ul><li><a href="https://medlineplus.gov/druginfo/meds/a620033.html">Remdesivir</a> (Veklury) is an antiviral medication approved by FDA to treat COVID-19. NIH guidelines <a href="https://www.covid19treatmentguidelines.nih.gov/antiviral-therapy/remdesivir/">recommend remdesivir</a> for certain hospitalized COVID-19 patients.&nbsp; It is given to patients by IV.</li></ul></li><li><strong>Reducing an overactive immune response.</strong> In patients with severe COVID-19, the body’s immune system may overreact to the threat of the virus. This can cause damage to the body’s organs and tissues. Some treatments can help reduce this overactive immune response.<ul><li><a href="https://medlineplus.gov/druginfo/meds/a682792.html">Dexamethasone</a> is a steroid medication. It acts like a natural hormone produced by the body, and can prevent or reduce injury. NIH guidelines <a href="https://www.covid19treatmentguidelines.nih.gov/immune-based-therapy/immunomodulators/corticosteroids/">recommend dexamethasone</a> for some patients with severe COVID-19. Dexamethasone is recommended for patients who need supplemental oxygen.</li></ul></li><li><strong>Treating complications.</strong> COVID-19 can damage the heart, blood vessels, kidneys, brain, skin, eyes, and gastrointestinal organs. It can also cause other complications. Depending on the situation, more treatments might be needed, such as blood thinners for blood clots.</li><li><strong>Supporting the body’s immune function<em>.</em> </strong>Plasma from recovered COVID-19 patients&nbsp;can contain antibodies to the virus. This may help the immune system recognize and respond more effectively to the virus. But currently, <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">NIH guidelines</a> do not recommend <a href="https://www.covid19treatmentguidelines.nih.gov/immune-based-therapy/blood-derived-products/convalescent-plasma/">plasma treatment</a>.</li></ul>
 
 
 
@@ -389,8 +389,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Yes. The FDA has issued two EUAs for monoclonal antibody drugs:</p>
-<ul><li>Bamlanivimab</li><li>Casirivimab and imdevimab, administered together</li></ul>
+            <p>Yes. The FDA has issued a few EUAs for monoclonal antibody drugs:</p>
+<ul><li>Bamlanivimab</li><li>Bamlanivimab and etesevimab, administered together</li><li>Casirivimab and imdevimab, administered together</li></ul>
 <p>Authorizations are for:</p>
 <ul><li>Non-hospitalized patients with mild or moderate COVID-19.</li><li>Adult and pediatric patients 12 years of age and older weighing at least 88 pounds.&nbsp;</li><li>Patients at high risk for progressing to severe COVID-19 or hospitalization. This includes those who are 65 years of age or older, or who have certain chronic medical conditions.</li></ul>
 <p>The drugs are administered as a single dose intravenously by health care providers.</p>
@@ -398,8 +398,8 @@
 <ul><li>Hospitalization</li><li>Oxygen therapy</li><li>An increase in baseline oxygen flow due to underlying non-COVID-19-related conditions</li></ul>
 <p>Patients treated with these drugs should continue to:</p>
 <ul><li>Self-isolate</li><li>Wear a mask&nbsp;</li><li>Socially distance&nbsp;</li><li>Avoid sharing personal items&nbsp;</li><li>Clean and disinfect “high touch” surfaces&nbsp;</li><li>Frequently wash their hands</li></ul>
-<p>For more information, see</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody Bamlanivimab for Treatment of COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Monoclonal Antibodies Casirivimab and Imdevimab for Treatment of COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab</a>&nbsp;</li><li>FDA: <a href="https://www.fda.gov/media/143894/download">Frequently Asked Questions on the Emergency Use Authorization of Casirivimab + Imdevimab</a></li></ul>
+<p>Find out more about these treatments from the FDA:</p>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody Bamlanivimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">Monoclonal Antibody Bamlanivimab and Etesevimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Monoclonal Antibodies Casirivimab and Imdevimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/media/143605/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab</a> </li><li><a href="https://www.fda.gov/media/145808/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab and Etesevimab</a></li><li><a href="https://www.fda.gov/media/143894/download">Frequently Asked Questions on the Emergency Use Authorization of Casirivimab + Imdevimab</a></li></ul>
 
                   </div>
                 </div>
@@ -462,8 +462,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Yes, the FDA has <a href="https://www.fda.gov/news-events/press-announcements/fda-approves-first-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,of%20COVID%2D19%20requiring%20hospitalization.">approved the antiviral drug Veklury (remdesivir)</a> for these patients. Veklury should only be used in a hospital or in a healthcare setting capable of providing acute care. </p>
-<p>Note that the FDA changed who can receive this drug under the EUA to ensure continued access to it for certain pediatric patients.</p>
+            <p>Yes, the FDA has <a href="https://www.fda.gov/news-events/press-announcements/fda-approves-first-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,of%20COVID%2D19%20requiring%20hospitalization.">approved the antiviral drug Veklury (remdesivir)</a> for these patients. Veklury should only be used in a hospital or in a healthcare setting capable of providing acute care.&nbsp;</p>
+<p>Note that the FDA changed who can receive this drug under the EUA&nbsp;to ensure continued access to it for certain pediatric patients.</p>
 <p>For more information, see <a href="https://www.fda.gov/media/137574/download">Frequently Asked Questions about the Remdesivir EUA</a><strong> </strong>(PDF).</p>
 
                   </div>
