--- a/sign-up-for-county-alerts/index.html
+++ b/sign-up-for-county-alerts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Local Alerts</h1>
           
-            <p class="small-text">Last updated&nbsp;February 19, 2021 at 8:47 AM</p>
+            <p class="small-text">Last updated&nbsp;February 19, 2021 at 8:57 AM</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
         </label>
         <div class="awesomplete">
           <div class="awesomplete">
-            <input aria-owns="awesomplete_list_1" aria-controls="awesomplete_list_1" autocomplete="off" class="city-search form-control" data-list="" data-multiple="" id="location-query" role="combobox" type="text" aria-expanded="true">
+            <input aria-owns="awesomplete_list_1" aria-controls="awesomplete_list_1" autocomplete="off" class="city-search form-control" data-list="" data-multiple="" id="location-query" role="combobox" type="text" aria-expanded="false">
           </div>
         </div>
         <button class="btn btn-primary" type="submit">
