--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>Maps of school reopenings in California now available</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>New youth and adult sports guidance outlines a return to competition</strong></strong></h2>
 
 
 
-<p>The Safe Schools for All Hub now has Reopening Maps, which give a statewide snapshot of school reopenings across California. They list each school district’s current mode of instruction (in-person, hybrid, or distance learning) and link to its COVID safety plan.</p>
+<p>The California Department of Public Health has released new guidance for youth and adult recreational sports which will go into effect February 26. It shows which sports will be allowed to return to play in which tiers, based on level of contact and risk of coronavirus transmission.</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">View the maps</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Read the guidance</a></p>
