--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;February 19, 2021 at 3:50 PM</p>
+            <p class="small-text">Last updated&nbsp;February 19, 2021 at 3:52 PM</p>
           
         </div>
       </div>
@@ -685,7 +685,7 @@
             <p>Air pollutants from wildfire smoke can irritate the lungs, cause inflammation, weaken your immune system, and increase your risk of respiratory infections like COVID-19. Also, wildfire smoke exposure can worsen COVID-19 symptoms and outcomes.</p>
 <p>Keep in mind that some respiratory symptoms from wildfire smoke exposure and COVID-19 may be similar. These include cough, sore throat, and difficulty breathing.</p>
 <p>COVID-19 symptoms that are unrelated to smoke exposure include fever or chills, muscle or body aches, and diarrhea. If you think you may have COVID-19, contact your doctor.</p>
-<p>The CDC has more detailed information about <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/smoke-faq.html">Wildfire Smoke and COVID-19</a>.</p>
+<p>The CDC has more detailed information about <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/smoke-faq.html">wildfire smoke and COVID-19</a>.</p>
 
                   </div>
                 </div>
