--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;February 19, 2021 at 11:37 AM</p>
+            <p class="small-text">Last updated&nbsp;February 19, 2021 at 5:32 PM</p>
           
         </div>
       </div>
@@ -1935,12 +1935,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Schools &#8211; updated January 14, 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Schools &#8211; updated February 19, 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>California has updated the guidance and framework for reopening K-12 schools for in-person learning for the 2020-2021 school year. Learn more in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">COVID-19 and Reopening In-Person Instruction Framework &amp; Public Health Guidance for K-12 Schools in California, 2020-2021 School Year (PDF)</a>.</p>
+            <p>California has updated the guidance and framework for reopening K-12 schools for in-person learning for the 2020-2021 school year. Learn more in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12 schools reopening framework and guidance (PDF)</a>. Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">questions and answers</a> about the K-12 schools reopening framework and guidance.</p>
 <p> Schools must also follow the <a href="https://covid19.ca.gov/industry-guidance/#cohort-guidance">guidance related to cohorts</a> of children and youth. For school-sponsored youth sports, follow the <a href="https://covid19.ca.gov/industry-guidance/#youthsports-guidance">guidance for youth sports</a>.</p>
 <p>Visit <a href="https://schools.covid19.ca.gov/">Safe Schools for All</a> for the latest information and resources about COVID-19 and schools.</p>
 
