--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 19, 2021 sa 7:56 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 20, 2021 sa 10:46 AM</p>
           
         </div>
       </div>
