--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;February 19, 2021 at 3:54 PM</p>
+            <p class="small-text">Last updated&nbsp;February 20, 2021 at 9:11 PM</p>
           
         </div>
       </div>
@@ -331,7 +331,7 @@
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
             <p>Anyone can get infected with coronavirus. Currently, those at greatest risk of infection are persons who have had prolonged, unprotected <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> (within 6 feet for at least 15 minutes over a 24-hour period) with a patient with confirmed coronavirus infection, regardless of whether the patient has symptoms. Those frequently in group settings (like homeless shelters, assisted living facilities, or college dormitories) are at increased risk of acquiring infection because of the increased likelihood of close contact. Those who live in or have recently been to areas with sustained transmission may also be at higher risk of infection. Everyone can reduce the risk to themselves and others by:</p>
-<ul><li><a href="https://covid19.ca.gov/vaccines/">Getting vaccinated</a></li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html"><strong>Staying home and isolating</strong></a><strong> from others when sick</strong></li><li>Wearing a mask </li><li>Practicing physical distancing </li><li>Washing their hands often, and </li><li>Taking <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html">other prevention measures</a>.</li></ul>
+<ul><li><a href="https://covid19.ca.gov/vaccines/">Getting vaccinated</a></li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html"><strong>Staying home and isolating</strong></a><strong> from others when sick</strong></li><li>Wearing a mask </li><li>Practicing physical distancing and avoiding crowds</li><li>Washing their hands often</li></ul>
 
                   </div>
                 </div>
@@ -346,6 +346,10 @@
 
 
 
+
+
+
+<p>Taking <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html">other prevention measures</a>.</p>
 
 
 
