--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;10:47 ص الساعة 21 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:12 م الساعة 21 فبراير 2021</p>
           
         </div>
       </div>
@@ -157,6 +157,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-060.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#331)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--16608f06f27359925c697704d98ae849 -->February 20, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-059.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#330)</a>
