--- a/ko/index.html
+++ b/ko/index.html
@@ -307,11 +307,11 @@
 
 <title>loud-speaker</title><path d="M118,259.59c22.26,1.6,42.91,1.6,58.81,3.18-27-28.61-68.35-89-31.79-173.25L92.54,142C65.52,192.83,103.66,248.47,118,259.59Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M70.29,159.45A330.84,330.84,0,0,1,33.74,196C9,217,18,252.59,44.86,256.4c16.55,2.35,47.68,3.18,47.68,3.18C52.8,207.13,70.28,159.45,70.28,159.45Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M178.37,290.08c0-1.36.88-5.33-3.17-5.4-6.28-.1-59.95-1.29-67.2-1.57-2.56-.1-1.15,4.27.43,5.61,6.35,8.11,17.49,22.95,31.79,52.67,20.66,45.91,9.54,58.05,41.33,55.36C213.33,392.69,173.6,346.79,178.37,290.08Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M310.31,22.75c-39.74-36.55-73.12-9.54-82.66-1.59-20.67,15.89-27,20.66-44.51,38.15-25.43,31.79-62,109.68,17.49,203.46,46.1,4.77,90.61,9.54,124,9.54,12.71,0,41.33-7.94,47.68-49.27,11.12-66.77-11.13-152.59-62-200.27Zm19.07,228.9c-28.61,7.94-66.77-35-85.84-98.56S232.42,32.3,261,22.75c28.61-7.94,66.77,35,85.84,98.56C364.36,184.88,358,242.11,329.38,251.65Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M302.84,135.64c7.9,26,4.78,50-7,53.61s-27.7-14.64-35.61-40.68-4.77-50,7-53.61S294.93,109.6,302.84,135.64Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/></svg>
 						<div class="hero-alert-text">
-							<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>새로운 청소년 및 성인 스포츠 지침은 시합 재개에 대한 개요를 나타냅니다</strong></strong></h2>
+							<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong>캘리포니아 주 정부의 교직자와 보육 서비스 제공자에 대한 백신 접종 촉진 노력</strong></strong></strong></h2>
 
 
 
-<p>캘리포니아 공중 보건부(California Department of Public Health)는 2월 26일 자로 시행되는 청소년 및 성인 레크리에이션 스포츠에 대한 새로운 지침을 발표하였습니다. 이를 통해 코로나바이러스 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">해당 지침 확인</a> 
+<p>주 정부는 3월 1일 부터 백신 물량의 10%를 K-12 교직원 및 보육 관련 근로자에게 배정할 예정입니다. 해당 근로자는 제공받는 특별 코드를 통해 <a href="https://myturn.ca.gov/">myturn.ca.gov</a>에서 신속하게 예약을 잡을 수 있습니다.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf?TSPD_101_R0=087ed344cfab2000c125e650773b596a9dc101ce13a20af74f4276acc098302b1a6dab6b7e713d16083cbf02181430002a6def99f459d421acae673be525856e7820fe2f89b216d77a02fd96708937a74e56bbd070a2b36156ba0f7828e21ba2" class="action-link pt-3 pb-3 px-4">배분 방안 참조</a> 
 						</div>
 					</div>
 
