--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 28, 2021 sa 10:06 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 1, 2021 sa 7:31 AM</p>
           
         </div>
       </div>
