--- a/holidays/index.html
+++ b/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Holidays and COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;March 1, 2021 at 5:27 PM</p>
+            <p class="small-text">Last updated&nbsp;March 1, 2021 at 5:40 PM</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<!-- testing -->
+<!-- testing hi -->
 
 
 
