--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 1, 2021 at 5:20 PM</p>
+            <p class="small-text">Last updated&nbsp;March 2, 2021 at 5:59 AM</p>
           
         </div>
       </div>
@@ -340,6 +340,10 @@
 
 
 <p>Online appointment scheduling for other groups and residents of other counties will be available soon statewide. Appointments are available in Spanish.</p>
+
+
+
+<blockquote class="wp-block-quote"><p><a href="https://vaccinefinder.org/" class="action-link pt-3 pb-3 px-4"><strong>Schedule your vaccination appointment </strong></a></p></blockquote>
 
 
 
